=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Changed: Album Page: (windmillway) 
		1) Lightbox General Help Text now in line with PGV norms. (lang variable is also split for easier editing)
		2) Tidy up thumbnail area - Added drop-down menu to replace links above and below thumbnail.
		3) Made "View Notes" link a "toggle Show"/"toggle Hide" item on thumbnails and enlarged Lightbox images.
 - Fixed: [ 1677025 ] Search Results Sorttable List - Main name (fisharebest)
 - Fixed: [ 1166561 ] Undefined Indis in Indi-/Fam-List (fisharebest)
 - Fixed: [ 1998767 ] Google analytics error on Google place check (fisharebest)
 - Fixed: [ 1731593 ] Name twice in Individual and Family lists (fisharebest)
 - Fixed: [ 1985733 ] 3215 Unrecognized GEDCOM Code (fisharebest)
 - Fixed: [ 1675790 ] Individual List - Duplicates - Omissions (fisharebest)
 - Fixed: [ 1675691 ] Highlighted names with special characters - unprintable (fisharebest)
 - Fixed: [ 1984020 ] Placelist Indi Count Issue (fisharebest)
 - Fixed: [ 1952481 ] Special Unknown Names do not print OK (fisharebest)
 - Fixed: [ 1941667 ] SVN 2840 4.1.5 ... TITLE shows living people (fisharebest)
 - Fixed: [ 1849075 ] SVN2416 ... indilist sums incorrectly (fisharebest)
 - Fixed: [ 1967411 ] INDI sorting issue, latest SVN (fisharebest)
 - Fixed: [ 1921937 ] Starred surname in Surname Lists (fisharebest)
 - Fixed: [ 1999315 ] 3344 New Name & Lists (fisharebest)
 - Fixed: Indi Page Media Tab: Corrected truncation of title when Lightbox Image opened. (windmillway)
 - Fixed: Indi Page: Corrected Research assistant and Googlemap validation errors, tidied up a few lightbox files  (windmillway)
 - Fixed: Indi Page: Corrected all Validation errors. (windmillway) 
		1) most within Lightbox files. 